fix scrollbar moving content to the left

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
     background-color: #0c1821 !important;
     font-family: Roboto, sans-serif;
+    width: 100vw;
 }
